sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: ')' expected but ':' found.
  for (k< 1 to (getValueCount():Int)) {
                               ^AlgBubbleSort1:8: error: '<-' expected but '}' found.
} 
^