sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (k< 1 to (getValueCount():Int)) {
    if (!isSmaller(k+1,k)){
      swap(k,k+1)
    }
  }
}